...
          ),
        ),
        Semantics(
          label:
              'Enter your username', // Add a semantic label for accessibility
          child: TextFormField(
            key: const ValueKey('usernameField'),
            controller: usernameController,
            focusNode: usernameFocusNode,
            validator: (value) {
              if (value == null || value.isEmpty) {
                return null;
              }
...
          ),
        ),
        Semantics(
          label:
              'Enter your password', // Add a semantic label for accessibility
          child: TextFormField(
            key: const ValueKey('passwordField'),
            obscureText: obscureText,
            focusNode: passwordFocusNode,
            controller: passwordController,
            validator: (value) {
              if (value == null || value.isEmpty) {
                return null;
...
                                ? CircularProgressIndicator(
                                    color: isDark
                                        ? CustomThemes().gettheme().bgColor
                                        : CustomThemes().gettheme().whitecolor,
                                  ) // Show loading indicator
                                : Text(
                                    key: const ValueKey('signInButton'),
                                    'Sign In',
                                    style: TextStyle(
                                      color: isDark
                                          ? CustomThemes().gettheme().bgColor
                                          : CustomThemes()
                                              .gettheme()
...
