...
                                        borderRadius:
                                            BorderRadius.circular(8.0),
                                      ),
                                      fixedSize: const Size(200, 55),
                                    ),
                                    child: Text(
                                      isSignIn == '' ? 'Sign In' : 'Sign Out',
                                      style: TextStyle(
                                        color: isDark
                                            ? CustomThemes().gettheme().bgColor
                                            : CustomThemes()
                                                .gettheme()
                                                .whitecolor,
...
                                                builder: (context) =>
                                                    const BookmarkScreen()));
                                        await AnalyticsService
                                            .userInteractionTrack();
                                      },
                                      child: Text(
                                        'Bookmarks',
                                        style: TextStyle(
                                          color: isDark
                                              ? CustomThemes()
                                                  .gettheme()
                                                  .whitecolor
                                              : CustomThemes().gettheme().black,
...
                  Row(
                    children: [
                      Semantics(
                        label: 'Text size heading',
                        excludeSemantics: true,
                        child: Text(
                          'Text Size',
                          style: TextStyle(
                            color: isDark
                                ? CustomThemes().gettheme().whitecolor
                                : CustomThemes().gettheme().black,
                            fontSize: isIpad
                                ? (CustomThemes().gettheme().fontsize5 +
...
                      children: [
                        GestureDetector(
                          onTap: () async {
                            await AnalyticsService.userInteractionTrack();
                            ref
                                .watch(fontProvider.notifier)
                                .updateFonts('Small', TableNames.fontsize);
                            SemanticsService.announce(
                              "Small font selected",
                              TextDirection.ltr,
                            );
                          },
                          child: Column(
...
                        ),
                        GestureDetector(
                          onTap: () async {
                            await AnalyticsService.userInteractionTrack();
                            ref
                                .watch(fontProvider.notifier)
                                .updateFonts('Medium', TableNames.fontsize);
                            SemanticsService.announce(
                              "Medium font selected",
                              TextDirection.ltr,
                            );
                          },
                          child: Column(
...
                        ),
                        GestureDetector(
                          onTap: () async {
                            await AnalyticsService.userInteractionTrack();
                            ref
                                .watch(fontProvider.notifier)
                                .updateFonts('Large', TableNames.fontsize);
                            SemanticsService.announce(
                              "Large font selected",
                              TextDirection.ltr,
                            );
                          },
                          child: Column(
...
                  FractionallySizedBox(
                    child: Row(children: [
                      Semantics(
                        excludeSemantics: true,
                        label: 'Appearance heading',
                        child: Text(
                          'Appearance',
                          style: TextStyle(
                            color: isDark
                                ? CustomThemes().gettheme().whitecolor
                                : CustomThemes().gettheme().black,
                            fontSize: isIpad
                                ? (CustomThemes().gettheme().fontsize5 +
...
                            child: Semantics(
                              excludeSemantics: true,
                              label: isDark
                                  ? "Light Mode  Double tap to activate"
                                  : "Light Mode  is on",
                              child: ModeSwitchButton(
                                buttonText: 'Light',
                                icon: Icons.wb_sunny,
                                isActive: !isDark,
                                onPressed: () async {
                                  darkModeNotifier.setLight();
                                  showModeSnackbar(context, "Light mode is ON");
                                },
...
                                ? "Dark Mode  is on"
                                : "Dark Mode  Double tap to activate",
                            child: Consumer(builder: (context, ref, child) {
                              final DarkModeNotifier darkModeNotifier =
                                  ref.read(darkModeProvider.notifier);
                              return ModeSwitchButton(
                                buttonText: 'Dark',
                                icon: Icons.nightlight,
                                isActive: isDark,
                                onPressed: () {
                                  darkModeNotifier.setDark();
                                  showModeSnackbar(context, "Dark mode is ON");
                                },
...
